tests/ui/forget-semicolon.stderr
error[E0308]: mismatched types
  --> $DIR/forget-semicolon.rs:11:5
   |
11 |     Some(()) //~ ERROR mismatched types
   |     ^^^^^^^^- help: try adding a semicolon: `;`
   |     |
   |     expected (), found enum `std::option::Option`
   |
   = note: expected type `()`
              found type `std::option::Option<()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
